@@ -25,10 +25,12 @@
 #include <stdio.h>
 #include <string.h>
 
+#if USE_GTK
 #include <gtk/gtk.h>
 #include <gdk/gdkprivate.h>
 #if !GTK_CHECK_VERSION(1,3,10)
 #include <stdlib.h>
+#endif
 #endif
 
 #include "openurl.h"
